name:                gloss-counter
version:             0.1.0.0
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       data-default
  other-modules:
    Controller
    Model
    View
    Player
    Assets
    Arith
    Gun
    GameState
    Turret
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , Player
                     , Assets
                     , Arith
                     , Gun
                     , GameState
                     , Turret

  default-language:    Haskell2010