name:                gloss-counter
version:             0.1.0.0
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       data-default,
                       JuicyPixels,
                       gloss-juicy
  other-modules:
    Controller
    Model
    View
    Player
    Assets
    Arith
    GameState
    Gun
    Explosion
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , Player
                     , Assets
                     , Arith
                     , GameState
                     , Gun
                     , Explosion

  default-language:    Haskell2010